20381
I tried to compile this code:

{code:scala}
case class T(x: Double, y: Double) {
  def >(that: T): Boolean = this.x > that.x

  def ~=(that: T): Boolean = (this.x - that.x).abs < 0.05
}

object Test {

  val t1 = T(1, 2)

  val t2 = T(3, 4)

  val res1 = t1 > t2

  val res2 = t1 > t2 && t2 > t1

  val res3 = t1 ~= t2

  val res4 = t1 ~= t2 && t2 > t1

  val res5 = t1 > t2 && t2 ~= t1
}
{code}

As result I have two errors:

{noformat}
Test.scala:19: error: value && is not a member of T
  val res4 = t1 ~= t2 && t2 > t1
                      ^
Test.scala:21: error: type mismatch;
 found   : T
 required: Boolean
  val res5 = t1 > t2 && t2 ~= t1
                        ^
two errors found
{noformat}

If I added round brackets around t1 ~= t2

{code:scala}
  val res4 = (t1 ~= t2) && t2 > t1

  val res5 = t1 > t2 && (t2 ~= t1)
{code}

it works well.

